objects/OPP_SupportRequest__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp;Opportunity__r.Account.Id,Opportunity__r.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Agreement related to the Opportunity</description>
        <label>Agreement</label>
        <referenceTo>OppAgreement__c</referenceTo>
        <relationshipLabel>Support Requests</relationshipLabel>
        <relationshipName>SupportRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AppDevEngineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>May 2011 Release</description>
        <inlineHelpText>Industrial Automation Expert with a broad machine knowledge and experience within an application segment. The Expert provides support to Sales with the design and machine concept as well as the complete solution development support to the customer.</inlineHelpText>
        <label>Application Development Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignedToUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>September Release - Field to store the value of the user assigned to the Support Request.</description>
        <label>Assigned To - User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AssignedToUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOX_Documentation_Link__c</fullName>
        <description>Clickable hyperlink to a BOX folder containing the relevant documentation related to the Support Request.</description>
        <label>BOX Documentation Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CenterKey__c</fullName>
        <description>This field is used to map a key to every entry in the Center picklist. This is used as a workaround for overcoming the character limitation on the workflow rule.</description>
        <formula>CASE(Center__c,
&quot;Product Modification Request - USA Only&quot;,1,
&quot;On-Time Delivery Request - USA Only&quot;,2,
&quot;Buildings Business Huddle Team&quot;,3,
&quot;Information Assurance Resource Center&quot;,4,
&quot;OEM Request for Panel Quote&quot;,5,
&quot;OEM Flex Center Services&quot;,6,
&quot;OEM Conversion Fund&quot;,7,
&quot;WWCC&quot;,8,
&quot;International Quotations Group&quot;,9,
&quot;West Regional Center&quot;,10,
&quot;Data Center Solutions&quot;,11,
&quot;PEC Retail - Office - Hotel&quot;,12,
&quot;PEC Industrial - Oil &amp; Gas&quot;,13,
&quot;PEC Healthcare&quot;,14,
&quot;Industrial Solutions Center (ISC)&quot;,15,
&quot;Energy Solutions Quotations&quot;,16,
&quot;Drives Quotations Group&quot;,17,
&quot;Lighting Control-IS&amp;C Solutions Center&quot;,18,
&quot;Engineered Product Quote Center&quot;,19,
&quot;IPaCS&quot;,20,
&quot;Service Quotation Group&quot;,21,
&quot;US Program Management Office&quot;,22,
&quot;OEM Flex Center Solutions Training&quot;,23,
&quot;OEM TASC Solutions Support&quot;,24,
&quot;RU-Moscow&quot;,25,
&quot;EMIS2&quot;,26,
&quot;US Automation Quotations Group&quot;,27,
&quot;Power Business Huddle Team&quot;,28,
&quot;Energy Business Huddle Team&quot;,29,
&quot;Industry Business Huddle Team&quot;,30,
&quot;SC-FR-SEV@ Chiffrage LISTE REF&quot;,31,
&quot;SC-FR-SEV@ Chiffrage CI-DET-SEC&quot;,32,
&quot;SC-FR-SEV@ Chiffrage AUT-SUPERVISION-SYSTEMES&quot;,33,
&quot;SC-FR-SEV@ Chiffrage VVD-MECA-MOTION&quot;,34,
&quot;SC-FR-STV - Chargé Etudes Residentiel et Tertiaire&quot;,35,
&quot;SC-FR-STV - Chargé Etudes Expert Distribution Electrique&quot;,36,
&quot;SC-FR-STV - Chargé Etudes HTa&quot;,37,
&quot;SC-FR-STV - SA Canalisation Electrique Puissance&quot;,38,
&quot;SC-FR-STV - SA Emergency Lighting&quot;,39,
&quot;SC-FR-CEO Energie&quot;,40,
&quot;SC-FR-Connectivité Réseau&quot;,41,
&quot;SC-FR-SAI Rueil&quot;,42,
&quot;SC-FR-SAI Lille&quot;,43,
&quot;SC-FR-SAI Metz&quot;,44,
&quot;SC-FR-SAI Lyon&quot;,45,
&quot;SC-FR-SAI Aix&quot;,46,
&quot;SC-FR-SAI Bordeaux&quot;,47,
&quot;SC-FR-SAI Nantes&quot;,48,
&quot;SC-FR-BDG Support Center Atlantique&quot;,49,
&quot;SC-FR-BDG Support Center Est&quot;,50,
&quot;SC-FR-BDG Support Center IDF&quot;,51,
&quot;SC-FR-Solution Centre IDF&quot;,52,
&quot;SC-FR-Solution Centre Nord-Normandie&quot;,53,
&quot;SC-FR-Solution Centre Ouest&quot;,54,
&quot;SC-FR-Solution Centre Est&quot;,55,
&quot;SC-FR-Solution Centre RAA&quot;,56,
&quot;SC-FR-Solution Centre Méditérranée&quot;,57,
&quot;SC-FR-Solution Centre Sud-ouest&quot;,58,
&quot;SC-FR-Solution Centre Central&quot;,59,
&quot;SC-FR-Solution Centre Export&quot;,60,
&quot;SC-FR-SAI-Solutions Répétitives&quot;,61,
&quot;OEM Canadian TASC Solutions Support&quot;,62,
&quot;SC-IND-M&amp;D-DriveSystems&quot;,63,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CenterKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Center__c</fullName>
        <label>Center</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SupportType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Product Modification Request - USA Only</fullName>
                </value>
                <value>
                    <fullName>On-Time Delivery Request - USA Only</fullName>
                </value>
                <value>
                    <fullName>WWCC</fullName>
                </value>
                <value>
                    <fullName>International Quotations Group</fullName>
                </value>
                <value>
                    <fullName>West Regional Center</fullName>
                </value>
                <value>
                    <fullName>Data Center Solutions</fullName>
                </value>
                <value>
                    <fullName>PEC Retail - Office - Hotel</fullName>
                </value>
                <value>
                    <fullName>PEC Industrial - Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>PEC Healthcare</fullName>
                </value>
                <value>
                    <fullName>Industrial Solutions Center (ISC)</fullName>
                </value>
                <value>
                    <fullName>OEM Request for Panel Quote</fullName>
                </value>
                <value>
                    <fullName>OEM Flex Center Services</fullName>
                </value>
                <value>
                    <fullName>OEM Conversion Fund</fullName>
                </value>
                <value>
                    <fullName>Energy Solutions Quotations</fullName>
                </value>
                <value>
                    <fullName>Drives Quotations Group</fullName>
                </value>
                <value>
                    <fullName>Lighting Control-IS&amp;C Solutions Center</fullName>
                </value>
                <value>
                    <fullName>Engineered Product Quote Center</fullName>
                </value>
                <value>
                    <fullName>IPaCS</fullName>
                </value>
                <value>
                    <fullName>Service Quotation Group</fullName>
                </value>
                <value>
                    <fullName>Buildings Business Huddle Team</fullName>
                </value>
                <value>
                    <fullName>Information Assurance Resource Center</fullName>
                </value>
                <value>
                    <fullName>US Program Management Office</fullName>
                </value>
                <value>
                    <fullName>OEM Flex Center Solutions Training</fullName>
                </value>
                <value>
                    <fullName>OEM TASC Solutions Support</fullName>
                </value>
                <value>
                    <fullName>RU-Moscow</fullName>
                </value>
                <value>
                    <fullName>EMIS2</fullName>
                </value>
                <value>
                    <fullName>US Automation Quotations Group</fullName>
                </value>
                <value>
                    <fullName>Power Business Huddle Team</fullName>
                </value>
                <value>
                    <fullName>Energy Business Huddle Team</fullName>
                </value>
                <value>
                    <fullName>Industry Business Huddle Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Comments should be used to provide detail on the support required by the creator of the Support Request and/or by the Solution Center/Recipient to add comments e.g. where they decline the request to take ownerhip of an opportunity.</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExecutionDurationMonths__c</fullName>
        <description>May 2011 Release</description>
        <label>Execution Duration (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpectedAnswerDate__c</fullName>
        <description>September Release - Date field to store the expected date for the answer.</description>
        <inlineHelpText>To be filled out by the Center and not the Requester.</inlineHelpText>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_SC_QC_Quotation_Reference__c</fullName>
        <description>For tracking a reference to a Support/Solution Center&apos;s own internal quotation system.</description>
        <label>Internal SC/QC Quotation Reference</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppAccountCountry__c</fullName>
        <description>October2012</description>
        <formula>Opportunity__r.AccountCountry__c</formula>
        <label>OppAccountCountry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppAccount__c</fullName>
        <description>SR0</description>
        <formula>Opportunity__r.Account.Name + &quot; &quot; +  Opportunity__r.Account.Site</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppAccount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppCloseDate__c</fullName>
        <description>SR0</description>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppCloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OppCountryOfDestination__c</fullName>
        <description>October2012</description>
        <formula>Opportunity__r.CountryOfDestination__r.Name</formula>
        <label>Country Of Destination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppEndUser__c</fullName>
        <description>SR0</description>
        <formula>Opportunity__r.EndUserCustomer__r.Name + &quot; &quot; +  Opportunity__r.EndUserCustomer__r.Site</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppEndUser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppExternalID__c</fullName>
        <description>SR0</description>
        <formula>Opportunity__r.OtherCRMReferenceNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppExternalID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppLeader__c</fullName>
        <description>SR0</description>
        <formula>Opportunity__r.TECH_OwnerID__r.FirstName + &quot; &quot; + Opportunity__r.TECH_OwnerID__r.LastName</formula>
        <label>Opportunity Creator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppLocation__c</fullName>
        <description>SR0</description>
        <formula>Opportunity__r.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppLocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppPriorityLevel__c</fullName>
        <description>SR0</description>
        <formula>TEXT(Opportunity__r.OpptyPriorityLevel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Priority Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppQuoteSubmissionDate__c</fullName>
        <description>November Release. Use to support request email template</description>
        <formula>Opportunity__r.QuoteSubmissionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppQuoteSubmissionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OppSEAccountID__c</fullName>
        <description>October2012</description>
        <formula>Opportunity__r.Account.SEAccountID__c</formula>
        <label>OppSEAccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppSEReference__c</fullName>
        <description>October2012</description>
        <formula>Opportunity__r.SEReference__c</formula>
        <label>OppSEReference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityAmount__c</fullName>
        <description>November Release. Use to support request list views</description>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunityMarketSegment__c</fullName>
        <description>Mar 2016 Release</description>
        <formula>CASE(Opportunity__r.MarketSegment__c, 
&quot;BD1&quot;, &quot;Wholesale &amp; Retail Trade&quot;, 
&quot;BD3&quot;, &quot;Hotels&quot;, 
&quot;BD4&quot;, &quot;Healthcare&quot;, 
&quot;BD9&quot;, &quot;Education &amp; Research&quot;,
&quot;BDR&quot;, &quot;Real Estate&quot;,  
&quot;BDZ&quot;, &quot;Industrial Buildings and Commercial&quot;, 
&quot;EN1&quot;, &quot;Electric Utilities&quot;, 
&quot;EN2&quot;, &quot;Oil, Gas &amp; Petrochemicals&quot;, 
&quot;EN3&quot;, &quot;Transportation&quot;, 
&quot;ID1&quot;, &quot;Machinery&quot;, 
&quot;ID2&quot;, &quot;Water&quot;, 
&quot;ID3&quot;, &quot;MMM&quot;, 
&quot;ID4&quot;, &quot;Food &amp; Beverage&quot;, 
&quot;ID5&quot;, &quot;Automotive &amp; E-Mobility&quot;, 
&quot;ID6&quot;, &quot;Household &amp; Personal Care&quot;,
&quot;ID7&quot;, &quot;Semiconductor&quot;, 
&quot;IDZ&quot;, &quot;Industrial Manufacturing and Commercial&quot;, 
&quot;IT1&quot;, &quot;IT Equipment and Professional Services&quot;, 
&quot;IT2&quot;, &quot;Finance&quot;, 
&quot;IT3&quot;, &quot;Cloud &amp; Service providers&quot;, 
&quot;PW1&quot;, &quot;Residential&quot;, 
&quot;PW3&quot;, &quot;Marine &amp; Shore Power&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Leader__c</fullName>
        <formula>Opportunity__r.Owner.FirstName +&quot; &quot; + Opportunity__r.Owner.LastName</formula>
        <label>Opportunity Leader</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.CreatedBy.FirstName +&apos; &apos;+Opportunity__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>September Release - Change the relationship type for september release.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Support Requests</relationshipLabel>
        <relationshipName>SupportRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OriginalQuoteLinkRev__c</fullName>
        <description>Original Quote Link with Revision Number for the QLK associated with the Opportunity</description>
        <formula>IF ( NOT ISBLANK(QuoteLink__c), QuoteLink__r.OriginalQuoteLinkRev__c,&apos;&apos;)</formula>
        <label>Original Quote Link # - Rev</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMTender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>May 2011 Release</description>
        <label>PM Tender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuoteLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Link</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OPP_QuoteLink__c.OpportunityName__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OPP_QuoteLink__c</referenceTo>
        <relationshipLabel>Support Requests</relationshipLabel>
        <relationshipName>SupportRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REP_AssignedtoUser__c</fullName>
        <description>This field is to calculate current user in reports</description>
        <formula>IF(AssignedToUser__c = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REP_AssignedtoUser</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_SupReqBusinessCreateDate__c</fullName>
        <description>Created for data mappings between Compass (Invensys CRM system) and bFO. Used to map the field Proposal.RequestedDate (in Compass) which is used to store &quot;the date when the Proposal was created in Compass&quot;. This field is really key for reporting metrics on Support Request.</description>
        <label>REP_SupReqBusinessCreateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rep_DeltaQuoteIssuanceCompletedSRDate__c</fullName>
        <formula>Opportunity__r.QuoteIssuanceDateToCustomer__c - DATEVALUE( TECH_CompletedDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeltaQuoteIssuanceCompletedSRDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_DeltaQuoteIssuanceRFPDate__c</fullName>
        <formula>Opportunity__r.QuoteIssuanceDateToCustomer__c - Opportunity__r.RFQReceivedOn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeltaQuoteIssuanceRFPDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_DeltaQuoteSubmissionIssuanceDate__c</fullName>
        <formula>Opportunity__r.QuoteSubmissionDate__c - Opportunity__r.QuoteIssuanceDateToCustomer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeltaQuoteSubmissionIssuanceDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_DeltaSRCompletedSupportDate__c</fullName>
        <formula>DATEVALUE(TECH_CompletedDate__c) - SupportRequestedBy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeltaSRCompletedSupportDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_DeltaSRExpectedVersusCompletedDate__c</fullName>
        <formula>ExpectedAnswerDate__c - DATEVALUE( TECH_CompletedDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeltaSRExpectedVersusCompletedDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_DeltaSupportRequestRFPDate__c</fullName>
        <formula>SupportRequestedBy__c - Opportunity__r.RFQReceivedOn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeltaSupportRequestRFPDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_SortByVIPStatus__c</fullName>
        <formula>IF(OR((TEXT(Opportunity__r.Account.Account_VIPFlag__c) = &quot;VIP1&quot;),
(TEXT(Opportunity__r.EndUserCustomer__r.Account_VIPFlag__c) = &quot;VIP1&quot;),
(TEXT(Opportunity__r.FinalCustSiteAcc__r.Account_VIPFlag__c) = &quot;VIP1&quot;)), 1, 

IF(OR((TEXT(Opportunity__r.Account.Account_VIPFlag__c) = &quot;VIP2&quot;),
(TEXT(Opportunity__r.EndUserCustomer__r.Account_VIPFlag__c) = &quot;VIP2&quot;),
(TEXT(Opportunity__r.FinalCustSiteAcc__r.Account_VIPFlag__c) = &quot;VIP2&quot;)), 2,

 
IF(OR((TEXT(Opportunity__r.Account.Account_VIPFlag__c) = &quot;VIP3&quot;),
(TEXT(Opportunity__r.EndUserCustomer__r.Account_VIPFlag__c) = &quot;VIP3&quot;),
(TEXT(Opportunity__r.FinalCustSiteAcc__r.Account_VIPFlag__c) = &quot;VIP3&quot;)), 3, 4)))</formula>
        <label>Rep_Sort By VIP Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_By_LU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SellingCenterHLNK__c</fullName>
        <formula>IF(NOT(ISBLANK(SellingCenter__c)) , HYPERLINK( SellingCenter__r.Id,  SellingCenter__r.Name) +&apos; &apos;+HYPERLINK(&apos;/apex/VFP80_SearchSellingCenter?CF00NA000000559Lc=&apos; +    Opportunity__r.Name +&apos;&amp;scName=&apos;+SellingCenter__r.Name+ &apos;&amp;CF00NA000000559Lc_lkid=&apos; + Opportunity__r.Id + &apos;&amp;id=&apos;+Id+&apos;&amp;scontrolCaching=1&amp;retURL=&apos; +   Id + &apos;&amp;RecordType=&apos; +  RecordTypeId,&apos;[Change]&apos; ,&apos;_top&apos;), HYPERLINK(&apos;/apex/VFP80_SearchSellingCenter?CF00NA000000559Lc=&apos; +   Opportunity__r.Name +&apos;&amp;scName=&apos;+SellingCenter__r.Name+&apos;&amp;scName =&apos;+SellingCenter__r.Name +&apos;&amp;CF00NA000000559Lc_lkid=&apos; + Opportunity__r.Id + &apos;&amp;id=&apos;+Id+&apos;&amp;scontrolCaching=1&amp;retURL=&apos; +   Id + &apos;&amp;RecordType=&apos; +  RecordTypeId, &apos;[Change]&apos; ,&apos;_top&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To - Selling Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SellingCenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>September release - To store the selling center related to a support request</description>
        <inlineHelpText>Type &quot;SE&quot; in the search field and click &quot;Go&quot; to display the full list of Selling Centers.</inlineHelpText>
        <label>Assigned To - Selling Center</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OPP_SellingCenter__c.Email__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OPP_SellingCenter__c</referenceTo>
        <relationshipLabel>Support Requests</relationshipLabel>
        <relationshipName>SupportRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SolutionArchitect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>July12 – the goal is to compare opportunities that that have both ADE and SAE</description>
        <inlineHelpText>Provides expertise on SE system &amp; architecture platform, understands customer requirements &amp; constrains, supports Sales   Rep by customizing Test Validated Architecture to meet requirements &amp; bring differentiating Value proposition to our customer.</inlineHelpText>
        <label>Solution Architect</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SolutionCenterHLNK__c</fullName>
        <formula>IF(NOT(ISBLANK(  SolutionCenter__c )) , HYPERLINK( SolutionCenter__r.Id,  SolutionCenter__r.Name) +&apos; &apos;+HYPERLINK(&apos;/apex/VFP90_SearchSolutionCenter?CF00NA000000559Lc=&apos; +    Opportunity__r.Name +&apos;&amp;scName=&apos;+SolutionCenter__r.Name+ &apos;&amp;CF00NA000000559Lc_lkid=&apos; + Opportunity__r.Id + &apos;&amp;id=&apos;+Id+&apos;&amp;retURL=&apos; + Id + &apos;&amp;RecordType=&apos; +  RecordTypeId,&apos;[Change]&apos; ,&apos;_top&apos;), HYPERLINK(&apos;/apex/VFP90_SearchSolutionCenter?CF00NA000000559Lc=&apos; +   Opportunity__r.Name +&apos;&amp;scName=&apos;+SolutionCenter__r.Name+&apos;&amp;scName =&apos;+SolutionCenter__r.Name +&apos;&amp;CF00NA000000559Lc_lkid=&apos; + Opportunity__r.Id + &apos;&amp;id=&apos;+Id+&apos;&amp;retURL=&apos; +   Id + &apos;&amp;RecordType=&apos; +  RecordTypeId, &apos;[Change]&apos; ,&apos;_top&apos;) )</formula>
        <label>Assigned To - Solution/Quotation Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SolutionCenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>September Release - To Associate solution Center with Support Request</description>
        <inlineHelpText>Type &quot;SC&quot;  for Solution Centers or &quot;QC&quot; for Quotation Centers in the search field and click &quot;Go&quot; to display the full list of Centers.</inlineHelpText>
        <label>Assigned to – Solution/ Quotation Center</label>
        <referenceTo>SolutionCenter__c</referenceTo>
        <relationshipLabel>Support Requests</relationshipLabel>
        <relationshipName>SupportRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SR0+</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Accepted - Scheduled</fullName>
                </value>
                <value>
                    <fullName>Accepted - In Progress</fullName>
                </value>
                <value>
                    <fullName>Accepted - On Hold Back-Office</fullName>
                </value>
                <value>
                    <fullName>Accepted - On Hold Front-Office</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Refused</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SupportEmail__c</fullName>
        <label>Support e-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SupportRequest_VIPIcon__c</fullName>
        <formula>Opportunity__r.Opportunity_VIPIcon__c</formula>
        <label>&lt;VIPIcon&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportRequestedBy__c</fullName>
        <label>Requested Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SupportType__c</fullName>
        <label>Support Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solutions and Quotations Support Requests</fullName>
                </value>
                <value>
                    <fullName>Transfer Opportunity Ownership</fullName>
                </value>
                <value>
                    <fullName>Selling Support Request – Cross Border and Cross Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SupportUser1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assign an additional estimator to provide proposal deliverables and costing support for secondary portfolio products</inlineHelpText>
        <label>Support User 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SupportRequests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SupportUser2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assign an additional estimator to provide proposal deliverables and costing support for secondary portfolio products</inlineHelpText>
        <label>Support User 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SupportRequests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_AckTime__c</fullName>
        <description>MARCH 2012 RELEASE - elapsed time (in Hours) between &quot;Submitted&quot; status and another status</description>
        <label>Acknowledgement Time (Days)</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_AgreementId__c</fullName>
        <description>Holds the Agreement Id</description>
        <formula>Opportunity__r.AgreementReference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_AgreementId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_CompletedDate__c</fullName>
        <description>Description: MARCH 2012 RELEASE - the date when the status was set to completed</description>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TECH_ResolutionTime__c</fullName>
        <formula>IF(ISNULL(TECH_CompletedDate__c) ,0, TECH_CompletedDate__c - TECH_SubmittedDate__c)</formula>
        <label>Resolution Time (Days)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_SubmittedDate__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>MARCH 2012 RELEASE - the date when the status was set to &quot;Submitted&quot;</description>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TypeOfOffer__c</fullName>
        <label>Type Of Offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non Binding Budgetary</fullName>
                </value>
                <value>
                    <fullName>Bid to Bid</fullName>
                </value>
                <value>
                    <fullName>Bid to Buy</fullName>
                </value>
                <value>
                    <fullName>Framework Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VCPAccount__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp;ValueChainPlayer__r.Account__r.Id, ValueChainPlayer__r.Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VCP Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIPIcon__c</fullName>
        <formula>Opportunity__r.Opportunity_VIPIcon__c</formula>
        <label>VIP Icon</label>
        <type>Text</type>
    </fields>
</CustomObject>